# controller/userControl/user.go
@@ -3,9 +3,11 @@ package usercontrol
 import (
 	"park/database"
 	modelsuser "park/models/modelsUser"
+	"park/util"
+
+	"time"
 
 	"github.com/gofiber/fiber/v2"
-	"github.com/gofiber/fiber/v2/middleware/session"
 	"golang.org/x/crypto/bcrypt"
 )
 
@@ -14,18 +16,17 @@ type LoginInput struct {
 	Password string `json:"password" validate:"required"`
 }
 
-// Swagger için genel API bilgileri
-// @title           User Management API
-// @version         1.0
-// @description     API for user registration, login, and logout.
-// @contact.name    API Support
-// @contact.email   support@park.com
-// @host            localhost:3000
-// @BasePath        /api
+type UserResponse struct {
+	ID        int       `json:"id"`
+	Username  string    `json:"username"`
+	Firstname string    `json:"firstname"`
+	Lastname  string    `json:"lastname"`
+	IsActive  bool      `json:"is_active"`
+	Role      string    `json:"role"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+}
 
-var store = session.New()
-
-// Register a new user
 // @Summary      Register User
 // @Description  Creates a new user and stores their hashed password.
 // @Tags         User
@@ -38,28 +39,33 @@ var store = session.New()
 // @Router       /register [post]
 func Register(c *fiber.Ctx) error {
 	var user modelsuser.User
+
 	if err := c.BodyParser(&user); err != nil {
 		return c.Status(400).JSON(fiber.Map{"message": "Bad Request", "error": err.Error()})
 	}
-
-	// Password hashing
-	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(user.Password), 14)
+	user.IsActive = false
+	var existingUser modelsuser.User
+	if err := database.DB.Where("username = ?", user.Username).First(&existingUser).Error; err == nil {
+		return c.Status(400).JSON(fiber.Map{"message": "Username already exists"})
+	}
+	if len(user.Password) < 8 {
+		return c.Status(400).JSON(fiber.Map{"message": "Password must be at least 8 characters long"})
+	}
+	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(user.Password), bcrypt.DefaultCost)
 	if err != nil {
 		return c.Status(500).JSON(fiber.Map{"message": "Error hashing password"})
 	}
 	user.Password = string(hashedPassword)
 
-	// Save user in the database
 	if err := database.DB.Create(&user).Error; err != nil {
-		return c.Status(500).JSON(fiber.Map{"message": "Internal Server Error"})
+		return c.Status(500).JSON(fiber.Map{"message": "Internal Server Error", "error": err.Error()})
 	}
 
 	return c.Status(201).JSON(fiber.Map{"message": "User Created"})
 }
 
-// Login a user
 // @Summary      Login User
-// @Description  Authenticates a user and starts a session.
+// @Description  Authenticates a user and returns a JWT token in a cookie.
 // @Tags         User
 // @Accept       json
 // @Produce      json
@@ -70,14 +76,9 @@ func Register(c *fiber.Ctx) error {
 // @Failure      500 {object} map[string]string "message: Internal Server Error"
 // @Router       /login [post]
 func Login(c *fiber.Ctx) error {
-
 	var loginInput LoginInput
 	if err := c.BodyParser(&loginInput); err != nil {
 		return c.Status(400).JSON(fiber.Map{"message": "Bad Request", "error": err.Error()})
-	}
-
-	if loginInput.Username == "" || loginInput.Password == "" {
-		return c.Status(400).JSON(fiber.Map{"message": "Username and password are required"})
 	}
 
 	var user modelsuser.User
@@ -89,26 +90,69 @@ func Login(c *fiber.Ctx) error {
 		return c.Status(401).JSON(fiber.Map{"message": "Invalid credentials"})
 	}
 
+	token, err := util.CreateJWT(user.Id, user.Username)
+	if err != nil {
+		return c.Status(500).JSON(fiber.Map{"message": "Error creating JWT", "error": err.Error()})
+	}
+
+	c.Cookie(&fiber.Cookie{
+		Name:     "jwt",
+		Value:    token,
+		HTTPOnly: true,
+		SameSite: "Strict",
+		Path:     "/",
+		MaxAge:   0,
+	})
+
 	return c.JSON(fiber.Map{"message": "Login successful"})
 }
 
-// Logout a user
 // @Summary      Logout User
-// @Description  Ends the session of a logged-in user.
+// @Description  Ends the session of a logged-in user by deleting the JWT token cookie.
 // @Tags         User
 // @Produce      json
 // @Success      200 {object} map[string]string "message: Logout successful"
 // @Failure      500 {object} map[string]string "message: Internal Server Error"
 // @Router       /logout [post]
 func Logout(c *fiber.Ctx) error {
-	sess, err := store.Get(c)
-	if err != nil {
-		return c.Status(500).JSON(fiber.Map{"message": "Internal Server Error"})
-	}
-
-	if err := sess.Destroy(); err != nil {
-		return c.Status(500).JSON(fiber.Map{"message": "Error destroying session"})
-	}
+	c.Cookie(&fiber.Cookie{
+		Name:     "jwt",
+		Value:    "",
+		HTTPOnly: true,
+		SameSite: "Strict",
+		Path:     "/",
+		MaxAge:   -1,
+	})
 
 	return c.JSON(fiber.Map{"message": "Logout successful"})
+}
+
+// @Summary      List Users
+// @Description  Retrieves a list of all users.
+// @Tags         User
+// @Produce      json
+// @Success      200 {array} UserResponse
+// @Failure      500 {object} map[string]string "message: Internal Server Error"
+// @Router       /users [get]
+func ListUsers(c *fiber.Ctx) error {
+	var users []modelsuser.User
+	if err := database.DB.Find(&users).Error; err != nil {
+		return c.Status(500).JSON(fiber.Map{"message": "Error retrieving users", "error": err.Error()})
+	}
+
+	var userResponses []UserResponse
+	for _, user := range users {
+		userResponses = append(userResponses, UserResponse{
+			ID:        user.Id,
+			Username:  user.Username,
+			Firstname: user.Firstname,
+			Lastname:  user.Lastname,
+			IsActive:  user.IsActive,
+			Role:      user.Role,
+			CreatedAt: user.CreatedAt,
+			UpdatedAt: user.UpdatedAt,
+		})
+	}
+
+	return c.JSON(userResponses)
 }
