# docs/swagger.json
@@ -152,7 +152,7 @@
         },
         "/login": {
             "post": {
-                "description": "Authenticates a user and starts a session.",
+                "description": "Authenticates a user and returns a JWT token in a cookie.",
                 "consumes": [
                     "application/json"
                 ],
@@ -216,7 +216,7 @@
         },
         "/logout": {
             "post": {
-                "description": "Ends the session of a logged-in user.",
+                "description": "Ends the session of a logged-in user by deleting the JWT token cookie.",
                 "produces": [
                     "application/json"
                 ],
@@ -323,6 +323,18 @@
                     },
                     {
                         "type": "string",
+                        "description": "Enter time (YYYY-MM-DD)",
+                        "name": "enter_time",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "End time (YYYY-MM-DD)",
+                        "name": "end_time",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
                         "description": "Parking spot number",
                         "name": "parkno",
                         "in": "query"
@@ -423,6 +435,38 @@
                     }
                 }
             }
+        },
+        "/users": {
+            "get": {
+                "description": "Retrieves a list of all users.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "List Users",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/usercontrol.UserResponse"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "message: Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -496,21 +540,7 @@
             }
         },
         "modelsuser.User": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "role": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
+            "type": "object"
         },
         "usercontrol.LoginInput": {
             "type": "object",
@@ -520,6 +550,35 @@
             ],
             "properties": {
                 "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "usercontrol.UserResponse": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "firstname": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "is_active": {
+                    "type": "boolean"
+                },
+                "lastname": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "updated_at": {
                     "type": "string"
                 },
                 "username": {
